--- a/src/index.css
+++ b/src/index.css
@@ -158,11 +158,11 @@ button.btn-xs {
   padding: .4vmin .5vmin;
 }
 
-button:disabled, form:invalid button[type="submit"] {
+/* button:disabled, form:invalid button[type="submit"] {
   cursor: not-allowed;
   background-color: var(--tan-4);
-}
-
+} */
+/* 
 button[type="submit"] {
   grid-column: span 2;
   margin: 1vmin 0 0;
@@ -170,4 +170,4 @@ button[type="submit"] {
   width: 100px;
   border-radius: 40px;
   font-size: 100%;
-}
+} */
