--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -5,7 +5,7 @@
     /* justify-content: center; */
 }
 
-table, th , td {
+th {
     border: 1px solid black;
     border-collapse: collapse;
 }
@@ -15,6 +15,11 @@ table, th , td {
 } */
 
 th {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 }
+
+/* td {
+    border-radius: 10px;
+    background-color: red;
+} */
