--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 /* CSS Custom Properties */
 /* CSS variables */
 :root {
-  --white: #FFFFFF;
+  /* --white: #FFFFFF;
   --tan-1: #FBF9F6;
   --tan-2: #E7E2DD;
-  --tan-3: #E2D9D1;
-  --tan-4: #D3C1AE;
-  --orange: #F67F00;
-  --text-light: #968c84;
-  --text-dark: #615954;
+  --tan-3: #E2D9D1; */
+  /* --orange: #F67F00; */
+  /* --text-light: #968c84;
+  --text-dark: #615954; */
+  background-color: #0A3A60;
 }
 
 /* CSS reset */
@@ -24,7 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--tan-4);
-  padding: 2vmin;
+  padding: 0px;
   height: 100vh;
 }
 
@@ -90,7 +90,8 @@ code {
   width: 450px;
   height:max-content;
   padding: 3vmin;
-  background-color: var(--tan-1);
+  background-color: white;
+  opacity: 80%;
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
 }
@@ -116,9 +117,9 @@ label {
 input {
   padding: 1vmin;
   font-size: 2vmin;
-  border: .1vmin solid var(--tan-3);
+  border: .1vmin solid black;
   border-radius: .5vmin;
-  color: var(--text-dark);
+  color: black;
   background-image: none !important; /* prevent lastpass */
   outline: none;
 }
@@ -137,7 +138,7 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: orange;
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
