--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -1,23 +1,45 @@
+.show-page {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .show-page-div {
+  /* bring your own prefixes */
     display: flex;
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
 }
 
+aside {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    padding-left: 20px;
+}
+
+table {
+    background-color: white;
+    border-radius: 15px;
+    padding: 2px;
+}
+
 th {
-    border: 1px solid black;
+    background-color: black;
+    color: white;
+    /* border: 1px solid black; */
     border-collapse: collapse;
+    width: 70px;
+    height: 70px;
+    border-radius: 15px;
+    margin: 30px;
 }
 
 /* .table-num-col {
     width: 50px;
 } */
 
-th {
-    width: 60px;
-    height: 60px;
-}
+
 
 /* td {
     border-radius: 10px;
