--- a/src/pages/BoardListPage/BoardListPage.css
+++ b/src/pages/BoardListPage/BoardListPage.css
@@ -1,6 +1,6 @@
 .board-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .card {
@@ -10,8 +10,8 @@
     justify-content:flex-end;
     background-color: white;
     border-radius: 10px;
-    /* width: 30; */
-    height: 50vh;
+    /* width: 200 px; */
+    height: 400px;
     margin: 5%;
     /* padding: 20%; */
 }
