--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -28,12 +28,35 @@ th {
     background-color: black;
     color: white;
     /* border: 1px solid black; */
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     width: 70px;
     height: 70px;
     border-radius: 15px;
     margin: 30px;
 }
+
+td {
+    text-align: center;
+    margin: 0px;
+}
+
+.outline-text {
+    margin: 5px;
+    font-family: 'Staatliches', cursive;
+    -webkit-text-stroke: .05px white;
+    font-size: 50px;;
+}
+
+.span-outline {
+    color: red;
+    -webkit-text-stroke: 1px black;
+}
+
+/* margin: 0px;
+font-family: 'Staatliches', cursive;
+font-size: 80px;
+/* font-weight: 900; */
+
 
 /* .table-num-col {
     width: 50px;
