--- a/src/pages/BoardListPage/BoardListPage.css
+++ b/src/pages/BoardListPage/BoardListPage.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content:flex-end;
-    background-color: white;
+    background-color: #F9F3E6;
     border-radius: 10px;
     /* width: 200 px; */
     height: 400px;
@@ -41,6 +41,15 @@
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: black;
-    color:white;
+    background-color: grey;
+    color:black;
+}
+
+.board-card-text {
+    margin: 0px;
+    font-family: 'Staatliches', cursive;
+    font-size: 80px;
+    /* font-weight: 900; */
+    color: #FA532E;
+    -webkit-text-stroke: 1px black;
 }
