--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -5,11 +5,9 @@
 }
 
 .show-page-div {
-  /* bring your own prefixes */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
 }
 
 aside {
@@ -27,8 +25,6 @@ table {
 th {
     background-color: black;
     color: white;
-    /* border: 1px solid black; */
-    /* border-collapse: collapse; */
     width: 70px;
     height: 70px;
     border-radius: 15px;
@@ -48,23 +44,6 @@ td {
 }
 
 .span-outline {
-    color: red;
+    color: #FA532E;
     -webkit-text-stroke: 1px black;
 }
-
-/* margin: 0px;
-font-family: 'Staatliches', cursive;
-font-size: 80px;
-/* font-weight: 900; */
-
-
-/* .table-num-col {
-    width: 50px;
-} */
-
-
-
-/* td {
-    border-radius: 10px;
-    background-color: red;
-} */
