--- a/src/components/TableSquare/TableSquare.css
+++ b/src/components/TableSquare/TableSquare.css
@@ -11,6 +11,7 @@
     height: 70px;
     margin: 0px;
     background-color: yellow;
+    font-size: 12px;
     border-radius: 15px;
     border: 1px solid black;
 }
