adds validation to game boards

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -57,12 +57,14 @@
 .squareup {
   font-size: 95px;
   font-family: 'Monoton', cursive;
+  color: #FA532E
 }
 
 .squareup-2 {
   font-size: 75px;
   font-family: 'Monoton', cursive;
   height: 70px;;
+  color: #FA532E
 }
 
 .nav-btn-2 {
