--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -1,4 +1,5 @@
 .show-page {
+    /* position: absolute; */
     display:flex;
     align-items: center;
     justify-content: center;
@@ -47,3 +48,12 @@ td {
     color: #FA532E;
     -webkit-text-stroke: 1px black;
 }
+
+.outline-text-2 {
+    margin-left: 90px;
+    color: red;
+    font-family: 'Staatliches', cursive;
+    -webkit-text-stroke: .03px black;
+    font-size: 25px;;
+}
+
