--- a/src/components/TableSquare/TableSquare.css
+++ b/src/components/TableSquare/TableSquare.css
@@ -15,3 +15,21 @@
     border-radius: 15px;
     border: 1px solid black;
 }
+
+/* .table-square-btn {
+    align-items: center;
+    margin: 0px;
+    background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
+    box-shadow: 4.2px 4.2px 5.6px 0 rgba(0, 0, 0, 0.25),
+     -2.8px -2.8px 4.2px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 15px;
+    display: flex;
+    height: 70px;
+    justify-content: center;
+    width: 70px;
+    background: #afd275;
+  } */
+  
+  /* .element-1 {
+    background: #afd275;
+  } */
