--- a/src/index.css
+++ b/src/index.css
@@ -4,73 +4,14 @@
   background-color: #0A3A60;
 }
 
-/* CSS reset */
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
-  padding: 0px;
+  /* padding: 0px; */
   height: 100vh;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#root {
-  height: 100%;
-}
-
-.align-ctr {
-  text-align: center;
-}
-
-.align-rt {
-  text-align: right;
-}
-
-.smaller {
-  font-size: smaller;
-}
-
-.flex-ctr-ctr {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.flex-j-end {
-  justify-content: flex-end;
-}
-
-.scroll-y {
-  overflow-y: scroll;
-}
-
-.section-heading {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: var(--tan-1);
-  color: var(--text-dark);
-  border: .1vmin solid var(--tan-3);
-  border-radius: 1vmin;
-  padding: .6vmin;
-  text-align: center;
-  font-size: 2vmin;
+  /* width: 100vw */
 }
 
 .auth-page {
@@ -80,7 +21,6 @@ code {
 }
 
 .form-container {
-  /* width: 600px; */
   height:max-content;
   padding: 3vmin;
   background-color: #F9F3E6;
@@ -116,10 +56,6 @@ input {
   outline: none;
 }
 
-input:focus {
-  border-color: var(--orange);
-}
-
 .btn-div {
   grid-column: span 2;
 }
@@ -137,14 +73,4 @@ button, a.button {
   border-radius: .5vmin;
   outline: none;
   cursor: pointer;
-}
-
-button.btn-sm {
-  font-size: 1.5vmin;
-  padding: .6vmin .8vmin;
-}
-
-button.btn-xs {
-  font-size: 1vmin;
-  padding: .4vmin .5vmin;
 }
