--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -2,39 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* navbar styling */
 .navbar {
   width: 100vw;
@@ -82,4 +49,8 @@
 nav > button.active {
   color: white;
   background-color: #00B7FF;
+}
+
+@media only screen and (max-width: 768px) {
+
 }
