updates styling and cleans code

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 /* CSS Custom Properties */
 /* CSS variables */
 :root {
-  background-color: #0A3A60;
+  /* background-color: #0A3A60; */
+  background-color: #fff;
 }
 
 body {
