--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  display:flex;
+  /* width: 100%; */
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  background-color: #fff;
 }
 
 /* navbar styling */
@@ -11,8 +18,9 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background-color: white;
-
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  /* border-bottom: 1px solid #ebebeb; */
   min-width: 960px;
 }
 
