--- a/src/pages/BoardListPage/BoardListPage.css
+++ b/src/pages/BoardListPage/BoardListPage.css
@@ -1,17 +1,24 @@
 .board-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 12px;
+    max-width: 1300px;
 }
 
-.card {
+.card-2 {
+    flex: 1 0 21%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content:flex-end;
-    background-color: #F9F3E6;
-    border-radius: 10px;
-    height: 400px;
-    margin: 5%;
+    /* justify-content:flex-end; */
+    background-color: white;
+    border: 1.5px solid rgb(128, 128, 128);
+    width: 380px;
+    height: 130px;
+    margin: 10px;
 }
 
 .title {
@@ -23,26 +30,37 @@
 
 .board-link {
     text-decoration: none;
-    width: 100%;
 }
 
-.board-picture {
+.board-teams {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    height: 70%;
-    width: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: grey;
-    color:black;
+    height: 65%;
+    width: 66%;
+    border-right: 1.5px solid gray;
+    text-align: left;
+    padding-left: 10%;
 }
 
-.board-card-text {
+.board-price {
+    width: 34%;
+}
+
+.board-card-text{
     margin: 0px;
-    font-family: 'Staatliches', cursive;
-    font-size: 80px;
-    color: #FA532E;
-    -webkit-text-stroke: 1px black;
+    font-family: Roboto, arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    /* color: rgb(189, 193, 198); */
+    color: black;
+}
+
+.board-card-text-2 {
+    font-family: Roboto, arial, sans-serif;
+    font-size: 26px;
+    font-weight: 400;
+    /* color: rgb(189, 193, 198); */
+    color: black;
 }
