--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -63,3 +63,23 @@ td {
     -webkit-text-stroke: .03px black;
     font-size: 25px;;
 }
+
+@media only screen and (max-width: 768px) {
+    table {
+        background-color: white;
+        width: 100%;
+        padding-left: 0;
+    }
+
+    .show-page {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    aside {
+        writing-mode: horizontal-tb;
+        transform: rotate(0deg);
+    }
+}
