--- a/src/components/TableSquare/TableSquare.css
+++ b/src/components/TableSquare/TableSquare.css
@@ -7,8 +7,8 @@
 
 .table-square-btn {
     color: black;
-    width: 70px;
-    height: 70px;
+    width: 100%;
+    height: 100%;
     margin: 0px;
     background-color: yellow;
     font-size: 12px;
