--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -21,7 +21,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   /* border-bottom: 1px solid #ebebeb; */
-  min-width: 960px;
+  /* min-width: 960px; */
 }
 
 .nav-btn {
