--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -1,14 +1,34 @@
 .show-page {
-    /* position: absolute; */
     display:flex;
-    /* width: 100%; */
+    width: 100%;
+    flex-direction: column;
     position: relative;
     overflow: auto;
-    /* overflow-x: auto; */
+    overflow-x: auto;
     align-items: center;
     justify-content: center;
-    
-    min-width: 960px;
+    /* min-width: 960px; */
+}
+
+.card-showpage {
+    flex: 1 0 21%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content:flex-end; */
+    background-color: white;
+    border: 1.5px solid rgb(128, 128, 128);
+    width: 380px;
+    min-height: 100px;
+    margin: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.board-card-text .team-score { float:right }
+
+.team-score {
+    margin-right: 15px;
 }
 
 .show-page-div {
@@ -30,7 +50,7 @@ table {
     padding: 2px;
 }
 
-th {
+th{
     background-color: black;
     color: white;
     min-width: 70px;
@@ -40,6 +60,8 @@ th {
 }
 
 td {
+    min-width: 70px;
+    height: 70px;
     text-align: center;
     margin: 0px;
 }
@@ -64,7 +86,58 @@ td {
     font-size: 25px;;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 820px) {
+
+    .table-scroll {
+        position: relative;
+        width:100vw;
+        z-index: 1;
+        /* margin: auto; */
+        overflow: auto;
+        height: 700px;
+    }
+
+    .table-scroll table {
+        position: absolute;
+        /* width: 100%; */
+        /* min-width: 1280px; */
+        /* margin: auto; */
+        /* border-collapse: separate; */
+        /* border-spacing: 0; */
+    }
+
+    .table-wrap {
+        position: relative;
+    }
+    
+    .table-scroll th,
+    .table-scroll td {
+        /* padding: 5px 10px; */
+        /* border: 1px solid #000;
+        background: #fff; */
+        vertical-align: top;
+    }
+    .table-scroll thead th {
+        /* background: #333;
+        color: #fff; */
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+    }
+
+    th:first-child {
+        position: -webkit-sticky;
+        position: sticky;
+        left: 0;
+        z-index: 2;
+    }
+
+    thead th:first-child {
+        z-index: 5;
+    }
+}
+
+/* @media only screen and (max-width: 768px) {
     table {
         background-color: white;
         width: 100%;
@@ -82,4 +155,4 @@ td {
         writing-mode: horizontal-tb;
         transform: rotate(0deg);
     }
-}
+} */
