--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -7,6 +7,7 @@
   align-items: center;
   overflow: auto;
   background-color: #fff;
+  height: 100vh;
 }
 
 /* navbar styling */
@@ -17,11 +18,16 @@
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: #fff;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   /* border-bottom: 1px solid #ebebeb; */
   /* min-width: 960px; */
+}
+
+.navbar .react-icon {
+  left: 15px;
+  width: 60px;
 }
 
 .nav-btn {
@@ -30,6 +36,34 @@
   border-radius: 40px;
   font-size: 100%;
 }
+
+.nav-list, .nav-settings{
+  display: flex;
+  background-color: white;
+  width: 100%;
+  border-top: 1.5px solid rgb(0, 0, 0,.2);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0 10px 0;
+  position: absolute;
+  top: 60px;
+  z-index: 10;
+}
+
+.nav-list {
+  left: 0;
+}
+
+.nav-settings {
+  right: 0;
+}
+
+
+
+/* .navbar a:hover {
+  color: red;
+} */
 
 .squareup {
   font-size: 95px;
@@ -52,8 +86,15 @@
 }
 
 .nav-link {
+  margin-bottom: 1.2rem;
   text-decoration: none;
-  color: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.nav-link:hover {
+  font-weight: bolder;
 }
 
 nav > button.active {
