--- a/src/pages/BoardShowPage/BoardShowPage.css
+++ b/src/pages/BoardShowPage/BoardShowPage.css
@@ -6,8 +6,8 @@
     overflow: auto;
     overflow-x: auto;
     align-items: center;
-    justify-content: center;
-    /* min-width: 960px; */
+    /* justify-content: center; */
+    flex: 1 1 auto;
 }
 
 .card-showpage {
@@ -19,7 +19,7 @@
     background-color: white;
     border: 1.5px solid rgb(128, 128, 128);
     width: 380px;
-    min-height: 100px;
+    max-height: 100px;
     margin: 10px;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -53,6 +53,7 @@ table {
 th{
     background-color: black;
     color: white;
+    max-width: 70px;
     min-width: 70px;
     height: 70px;
     border-radius: 15px;
@@ -60,7 +61,7 @@ th{
 }
 
 td {
-    min-width: 70px;
+    max-width: 70px;
     height: 70px;
     text-align: center;
     margin: 0px;
@@ -86,40 +87,51 @@ td {
     font-size: 25px;;
 }
 
+@media only screen and (max-width: 450px) {
+    .table-scroll-small {
+        position:relative;
+        display: flex;
+        width: 100vw;
+        z-index: 1;
+        overflow: auto;
+        flex: 1 1 auto;
+        margin-bottom: 10px;
+        max-height: 450px;
+    }
+
+    .table-scroll-small table {
+        position: absolute;
+    }
+    
+    .table-scroll-small thead th {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+    }
+
+    
+}
+
 @media only screen and (max-width: 820px) {
 
     .table-scroll {
-        position: relative;
-        width:100vw;
+        position:relative;
+        display: flex;
+        /* justify-content: center; */
+        /* width: 100vw; */
+        width: 100vw;
         z-index: 1;
         /* margin: auto; */
         overflow: auto;
-        height: 700px;
+        flex: 1 1 auto;
+        margin-bottom: 10px;
     }
 
     .table-scroll table {
         position: absolute;
-        /* width: 100%; */
-        /* min-width: 1280px; */
-        /* margin: auto; */
-        /* border-collapse: separate; */
-        /* border-spacing: 0; */
-    }
-
-    .table-wrap {
-        position: relative;
     }
     
-    .table-scroll th,
-    .table-scroll td {
-        /* padding: 5px 10px; */
-        /* border: 1px solid #000;
-        background: #fff; */
-        vertical-align: top;
-    }
     .table-scroll thead th {
-        /* background: #333;
-        color: #fff; */
         position: -webkit-sticky;
         position: sticky;
         top: 0;
@@ -135,24 +147,14 @@ td {
     thead th:first-child {
         z-index: 5;
     }
+
+    .card {
+        max-width: 92vw;
+        margin: 10px 0 10px 0;
+    }
+
+    .card-showpage {
+        max-width: 92vw;
+        margin: 30px 0 30px 0;
+    }
 }
-
-/* @media only screen and (max-width: 768px) {
-    table {
-        background-color: white;
-        width: 100%;
-        padding-left: 0;
-    }
-
-    .show-page {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    aside {
-        writing-mode: horizontal-tb;
-        transform: rotate(0deg);
-    }
-} */
