styles login form

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -66,9 +66,10 @@
 } */
 
 .squareup {
-  font-size: 95px;
+  font-size: 50px;
   font-family: 'Monoton', cursive;
-  color: #FA532E
+  /* font-family: Roboto, arial, sans-serif; */
+  color: black;
 }
 
 .squareup-2 {
