--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
 
 .form-container {
   height:max-content;
+  /* max-height: 200px; */
   padding: 3vmin;
   background-color: white;
   /* opacity: 80%; */
@@ -40,6 +41,11 @@ form {
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
   color: var(--text-light);
+  max-width: 90vw;
+}
+
+form select {
+  width: 100%;
 }
 
 label {
